<?xml version="1.0"?>
<package format="2">
  <name>octree_use</name>
  <version>0.0.0</version>
  <description>The octree_use package</description>

  <maintainer email="lee_firefly@todo.todo">lee_firefly</maintainer>

  <license>TODO</license>

  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>scene_octree_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>octomap_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>scene_octree_ros</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>topic_tools</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>

  <exec_depend>octomap_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>scene_octree_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
